# poetry-multi-package

./: pyproject.toml
poetry_multi_package/: __init__.py
poetry_multi_package/module2/: __init__.py  function2.py
